--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,37 @@
 {
-	"name" : "gollumsf/enum",
-	"type" : "library",
-	"description" : "An implementation of enum for PHP. Java like type",
-	"keywords" : [
-		"enum",
-		"java"
-	],
-	"homepage" : "https://github.com/GollumSF/enum",
-	"license" : "GPL-3.0-or-later",
-	"authors" : [{
-			"name" : "Damien Duboeuf",
-			"email" : "smeagolworms4@gmail.com"
-		}
-	],
-	"support" : {
-		"email" : "smeagolworms4@gmail.com",
-		"wiki" : "https://github.com/GollumSF/enum/blob/master/README.md"
-	},
-	"minimum-stability": "dev",
-	"require" : {
-		"php" : ">=7.0"
-	},
-	"autoload" : {
-		"psr-0" : {
-			"GollumSF\\Enum" : ""
-		}
-	},
-	"target-dir" : "GollumSF/Enum"
+    "name" : "gollumsf/enum",
+    "type" : "library",
+    "description" : "An implementation of enum for PHP. Java like type",
+    "keywords" : [
+        "enum",
+        "java"
+    ],
+    "homepage" : "https://github.com/GollumSF/enum",
+    "license" : "GPL-3.0-or-later",
+    "authors": [
+        {
+            "name": "Damien Duboeuf",
+            "email": "smeagolworms4@gmail.com"
+        }
+    ],
+    "support" : {
+        "email": "smeagolworms4@gmail.com",
+        "wiki": "https://github.com/GollumSF/rest-bundle/blob/master/README.md"
+    },
+    "require" : {
+        "php": "^7.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.5"
+    },
+    "autoload" : {
+        "psr-4" : {
+            "GollumSF\\Enum\\" : "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Test\\GollumSF\\Enum\\" : "tests/"
+        }
+    }
 }
