--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
         "wiki": "https://github.com/GollumSF/enum/blob/master/README.md"
     },
     "require" : {
-        "php": "^7.1"
+        "php": ">=7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7"
+        "phpunit/phpunit": "^9.3"
     },
     "autoload" : {
         "psr-4" : {
